# rs-sonos-mqtt

./: .envrc  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
nix/: default.nix  devShells.nix
nix/nix-os-image/: configuration.nix  default.nix
nix/rust/: default.nix
src/: main.rs
