[package]
name = "sonos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
futures = "0.3.30"
lazy_static = "1.4.0"
ntex = { version = "1.0", features = ["tokio", "rustls"] }
ntex-mqtt = { version = "1.0.0" }
rustls = "0.21.10"
rustls-pemfile = "1.0"
rustls-pki-types = "1.3.1"
sonor = "2.0.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
